# panmetis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/: copilot-instructions.md
.github/agents/: publisher.agent.md
.github/prompts/: publish.prompt.md  update-skills.prompt.md
src/panmetis/: __init__.py
src/panmetis/skills/using-superpowers/: SKILL.md
src/panmetis/skills/using-superpowers/references/: copilot-tools.md
