[project]
name = "panmetis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stabile Frisur", email = "26568863+stabilefrisur@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
