[project]
name = "panmetis"
version = "0.1.1"
description = "A curated collection of agent skills for AI coding assistants"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Stabile Frisur", email = "26568863+stabilefrisur@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []
keywords = ["agents", "skills", "ai", "coding-assistant", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/stabilefrisur/panmetis"
Repository = "https://github.com/stabilefrisur/panmetis"
Issues = "https://github.com/stabilefrisur/panmetis/issues"
Changelog = "https://github.com/stabilefrisur/panmetis/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panmetis"]

